1.09/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: p109-svc
spec:
  type: ClusterIP
  selector:
    app: p109
  ports:
    - port: 2343
      protocol: TCP
      targetPort: 8080
