1.09/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: p109-ingress
spec:
  rules:
  - http:
      paths:
      - path: /pingpong
        pathType: Prefix
        backend:
          service:
            name: p109-svc
            port:
              number: 2343
      - path: /
        pathType: Prefix
        backend:
          service:
            name: p107-svc
            port:
              number: 2344
